package com.inspection.classuml;

import java.util.List;

public class InspectItemInstanceCache {
    List<InspectItemInstance> inspectItemInstanceList;
}
